--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,2 +1,60 @@
-<h1>Welcome!</h1>
-
+<div style="padding: 20px">
+  <h2 class="center-align">SQL By Repetition</h2>
+</div>
+<p style="font-size: 17px" class="center-align">
+  Learn and practice writing SQL statements through a series of guided lessons and exercises built on top of the <a href="http://chinookdatabase.codeplex.com/">Chinook Database</a>. 
+</p>
+<br>
+<div class="row">
+  <a class="landing-link center-align" href="/lessons/1">
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image">
+          <i class="large material-icons">work</i>
+        </div>
+        <div class="card-content">
+          <h4 style="font-weight: bold">Lessons</h4>
+          <p>
+            If you're new to SQL, start here! Each lesson includes an explanation, a few examples, and a few things to try out. Current lesson count: <%= Lesson.total %>.
+          </p>
+          <br>
+          <p>ENTER</p>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a class="landing-link center-align" href="/playground">
+    <div class="col s12 m4">
+      <div class="card">
+        <div class="card-image">
+          <i class="large material-icons">games</i>
+        </div>
+        <div class="card-content">
+          <h4 style="font-weight: bold">Playground</h4>
+          <p>
+            Want to try out SQL statements using the Chinook Database? The playground provides a blank canvas for testing your SQL skills. 
+          </p>
+          <br>
+          <p>ENTER</p>
+        </div>
+      </div>
+    </div>
+  </a>
+  <a class="landing-link" href="/resources">
+    <div class="col s12 m4 center-align">
+      <div class="card">
+        <div class="card-image">
+          <i class="large material-icons">library_books</i>
+        </div>
+        <div class="card-content">
+          <h4 style="font-weight: bold">Resources</h4>
+          <p>
+            If you're looking for more information on SQL, databases, or data modeling, check out this list of crowd-sourced web and print resources.
+          </p>
+          <br>
+          <p>ENTER</p>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
