--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,16 +1,35 @@
 <html>
 <head>
   <title>MyApplication</title>
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-
-  <!-- Compiled and minified JavaScript -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="/javascripts/application.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
   <link rel="stylesheet" type="text/css" href="/style.css" />
 </head>
-<body>
+<body class="blue-grey lighten-5">
+  <ul id="dropdown1" class="dropdown-content">
+    <li><a href="/lessons">Lesson Index</a></li>
+    <li class="divider"></li>
+    <% Lesson.all.each do |lesson| %>
+      <li><a href="/lessons/<%= lesson.id %>"><%= lesson.id %>: <%= lesson.title %></a></li>
+    <% end %>
+  </ul>
+  <nav>
+    <div class="nav-wrapper blue darken-4">
+      <a href="/" class="brand-logo">SQL By Repetition </a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="/">Home</a></li>
+        <li><a class="dropdown-button" href="#!" data-activates="dropdown1">Lessons<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li><a href="/playground">Playground</a></li>
+        <li><a href="/resources">Resources</a></li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <%= yield %>
   </div>
+  <div style="padding: 50px"></div>
 </body>
 </html>
