--- a/app/views/_results_table.erb
+++ b/app/views/_results_table.erb
@@ -1,5 +1,5 @@
 <% unless @attempt.nil? ||  @attempt.results.empty? %>
-  <table class="table bordered highlight responsive-table">
+  <table class="table bordered highlight">
     <thead>
       <tr>
         <% @attempt.results.first.each do |key, value| %>
