--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>MyApplication</title>
+  <title>SQL by Repetition</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
