--- a/app/public/style.css
+++ b/app/public/style.css
@@ -23,13 +23,17 @@ table {
     width: 100%;
 }
 
-.photo-container { 
-    width: 100%; 
-    height: 200px; 
-    overflow: hidden; 
-}
-.photo-container img { 
+.photo-container {
     width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+.photo-container img {
+    width: 100%;
+}
+
+.dash-card {
+  height: 
 }
 
 .code {
